[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cert-sentinel"
version = "0.1.0"
description = "Deterministic TLS certificate and domain-registration expiry checker for a configurable list of domains."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "cyntra360hub" }]
dependencies = []

[project.optional-dependencies]
report = [
  "aiops-enabler @ git+https://github.com/cyntra360hub/aiops-enabler.git#subdirectory=sdk/python",
]
dev = [
  "pytest>=8",
]

[project.scripts]
cert-sentinel = "cert_sentinel.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
